# tablic

./: .gitignore  CMakeLists.txt  README.md  backtrack.cpp  backtrack.h  backtrack6.cpp  backtrack6.h  dp_simple.cpp  ga_training.cpp  genetic.cpp  genetic.h  greedy.cpp  greedy.h  main.cpp  utils.cpp  utils.h
tex/: firstpage.doc  lazar_milenkovic_rn8_13.tex  presentation.tex
